examples/errors/Broken.flx
module Errors.Broken {
  fn value() { 1; }
}
